name:                openwhisk-wrapper
version:             0.2.0.0
synopsis:            openwhisk service wrapper
description:         Please see README.md
homepage:            https://github.com/rainbyte/openwhisk-wrapper#readme
license:             GPL-3
license-file:        LICENSE
author:              Alvaro Fernando García
maintainer:          alvarofernandogarcia@gmail.com
copyright:           2016 Alvaro Fernando García
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.OpenWhisk
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-types
                     , scotty
                     , text
                     , transformers

executable openwhisk-example-hs
  hs-source-dirs:      example
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , openwhisk-wrapper
                     , text
